--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "nodemon index.js",
+    "prod": "ENV_PATH=.env.prod nodemon index.js",
+    "dev": "ENV_PATH=.env.dev nodemon index.js"
   },
   "keywords": [],
   "author": "",
